Change current content of projects.json

--- a/api/internal/tempDB/projects.json
+++ b/api/internal/tempDB/projects.json
@@ -1,25 +1,1 @@
-[
-  {
-    "id":1,
-    "name":"test",
-    "criteria":[],
-    "stakeholders":
-      [
-        {
-          "id":1,
-          "name":"Stakeholder 1",
-          "role":"Some Role"
-        },
-        {"id":2,"name":"Stakeholder 2","role":"Some Role"}],
-    "decisionMakers":
-      [
-        {
-          "id":1,
-          "name":"Decision Maker 1",
-          "role":"Some Role"},
-        {
-          "id":2,
-          "name":"Decision Maker 2",
-          "role":"Some Role"
-        }
-      ],"vendors":[]},{"id":2,"name":"test","criteria":[],"stakeholders":[{"id":1,"name":"Stakeholder 1","role":"Some Role"},{"id":2,"name":"Stakeholder 2","role":"Some Role"}],"decisionMakers":[{"id":1,"name":"Decision Maker 1","role":"Some Role"}],"vendors":[]}]
+[{"id":1,"name":"Test Project Name","criteria":[{"id":1,"name":"Security","explanation":"Explanation for Security"},{"id":2,"name":"Usability","explanation":"Explanation for Usability Edited Afterwards"}],"stakeholders":[{"id":1,"name":"Tatum","role":"Some Role"},{"id":2,"name":"Wilton","role":"Some Role"},{"id":3,"name":"Emile","role":"Some Role"}],"decisionMakers":[{"id":1,"name":"Carlie","role":"Some Role"},{"id":2,"name":"Lelah","role":"Some Role"}],"vendors":[]}]
