--- a/api/internal/tempDB/projects.json
+++ b/api/internal/tempDB/projects.json
@@ -1,1 +1,51 @@
-[{"id":1,"name":"Test Project Name","criteria":[{"id":1,"name":"Security","explanation":"Explanation for Security"},{"id":2,"name":"Usability","explanation":"Explanation for Usability Edited Afterwards"}],"stakeholders":[{"id":1,"name":"Tatum","role":"Some Role"},{"id":2,"name":"Wilton","role":"Some Role"},{"id":3,"name":"Emile","role":"Some Role"}],"decisionMakers":[{"id":1,"name":"Carlie","role":"Some Role"},{"id":2,"name":"Lelah","role":"Some Role"}],"vendors":[]}]
+[
+  {
+    "id": 1,
+    "name": "Test Project Name",
+    "criteria": [
+      {
+        "id": 1,
+        "name": "Security",
+        "explanation": "Explanation for Security",
+        "score": 0
+      },
+      {
+        "id": 2,
+        "name": "Usability",
+        "explanation": "Explanation for Usability Edited Afterwards",
+        "score": 0
+      }
+    ],
+    "stakeholders": [
+      {
+        "id": 1,
+        "name": "Tatum",
+        "role": "Some Role"
+      },
+      {
+        "id": 2,
+        "name": "Wilton",
+        "role": "Some Role"
+      },
+      {
+        "id": 3,
+        "name": "Emile",
+        "role": "Some Role"
+      }
+    ],
+    "decisionMakers": [
+      {
+        "id": 1,
+        "name": "Carlie",
+        "role": "Some Role"
+      },
+      {
+        "id": 2,
+        "name": "Lelah",
+        "role": "Some Role"
+      }
+    ],
+    "vendors": [],
+    "evaluationPhase": "Scoring"
+  }
+]
